[CI] remove OS check
and use local=1 variable  e.g. make local=1 cli

--- a/.travis.yml
+++ b/.travis.yml
@@ -98,7 +98,7 @@ script:
         stack install --local-bin-path ".output/$BUILD-$TAG"
         ;;
       linux)
-        make
+        make cli
         ;;
       windows)
         stack install --local-bin-path ".output/$BUILD-$TAG"
