--- a/arche.cabal
+++ b/arche.cabal
@@ -93,6 +93,7 @@ Executable arche-server
     , warp                       >= 3.0
   other-modules:
     Handler.ORFit 
+    Type.API
     Type.Result
     Util.OrphanInstances
 
