--- a/arche.cabal
+++ b/arche.cabal
@@ -81,6 +81,7 @@ Executable arche-server
     , gogol                      >= 0.4
     , gogol-firestore            >= 0.4
     , gogol-storage              >= 0.4
+    , hashable                   >= 1.2
     , http-conduit               >= 2.0
     , http-media                 >= 0.8
     , lens                       >= 4.0
@@ -97,8 +98,10 @@ Executable arche-server
     Handler.SubmitANG 
     Type.API
     Type.Result
+    Type.Storage
     Type.Store
     Util.OrphanInstances
+    Util.Hash
 
 Library
   hs-source-dirs:    src
