--- a/arche.cabal
+++ b/arche.cabal
@@ -73,6 +73,7 @@ Executable arche-server
     , sledge                     >= 0.4
     , vtk                        >= 0.1
     , aeson                      >= 1.0
+    , blaze-html                 >= 0.9
     , bytestring                 >= 0.10
     , conduit                    >= 1.3
     , conduit-extra              >= 1.3
@@ -87,6 +88,7 @@ Executable arche-server
     , lens                       >= 4.0
     , random                     >= 1.0
     , resourcet                  >= 1.2
+    , servant-blaze              >= 0.7
     , servant-server             >= 0.10
     , servant-multipart          >= 0.11
     , text                       >= 1.0
@@ -104,6 +106,7 @@ Executable arche-server
     Util.FireStore
     Util.OrphanInstances
     Util.Hash
+    Web.App
 
 Library
   hs-source-dirs:    src
