--- a/stack.yaml
+++ b/stack.yaml
@@ -8,15 +8,12 @@ packages:
 - packages/sledge/
 - packages/vtk/
 - packages/linear-vect/
+- packages/gogol/gogol-firestore
 
 extra-deps:
 - gogol-storage-0.5.0@sha256:ba90fd79b014316e0c6088b30f9757e2394bb8af4265615ca5ea284b930586f9,4815
 - gogol-core-0.5.0@sha256:c0a919cd89a33de7fd6ee925abdb48b0eb5d1002a016124acbdff568f267e4c7,2821
 - gogol-0.5.0@sha256:01b38acf97ae0afb2465935fee1bebce03c1b84e629cf0887467be7ae361f0a7,3222
-- git: git@github.com:arche-tool/gogol.git
-  commit: 192cb2e7a0ea47991a03735395c073a023a46c99
-  subdirs:
-    - gogol-firestore
 
 flags:
   hammer:
