--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
-        stack: ["2.2.0"]
+        stack: ["latest"]
         ghc: ["8.6.5"]
 
     steps:
