--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,3 +63,10 @@ jobs:
         files: $OUTPUT_DIR/*
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Deploy App container
+      if: startsWith(github.ref, 'refs/tags/')
+      env:
+        GCLOUD_SERVICE_KEY: {{ secrets.GCLOUD_SERVICE_KEY }}
+      run: | 
+        make deploy-server
