--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,55 @@ on:
     branches: [master]
 
 jobs:
-  stack:
+  ci-test:
+    name: CI test / ${{ matrix.os }} / ghc ${{ matrix.ghc }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        stack: ["latest"]
+        ghc: ["8.6.5"]
+
+    steps:
+    - uses: actions/checkout@v2
+      if: github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.ref == 'refs/heads/master'
+      with:
+        submodules: true
+    - run: git fetch --tags
+
+    - uses: actions/setup-haskell@v1.1
+      name: Setup Haskell Stack
+      with:
+        ghc-version: ${{ matrix.ghc }}
+        stack-version: ${{ matrix.stack }}
+        enable-stack: true
+
+    - uses: actions/cache@v1
+      name: Cache ~/.stack
+      with:
+        path: ~/.stack
+        key: ${{ runner.os }}-${{ matrix.ghc }}-stack
+
+    - name: Build
+      run: |
+        make build
+
+    - name: Test
+      run: |
+        make run-test
+
+    - name: Build cli tool
+      run: |
+        make arche-cli
+
+    - name: Build server
+      run: |
+        make arche-server
+
+  release-cli:
     name: ${{ matrix.os }} / ghc ${{ matrix.ghc }}
     runs-on: ${{ matrix.os }}
+    if: startsWith(github.ref, 'refs/tags/')
     strategy:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
@@ -19,9 +65,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       if: github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.ref == 'refs/heads/master'
-      run: git fetch --tags
       with:
         submodules: true
+    - run: git fetch --tags
 
     - uses: actions/setup-haskell@v1.1
       name: Setup Haskell Stack
@@ -56,16 +102,47 @@ jobs:
       run: | 
         make rename-binaries
 
-    - name: Release
+    - name: Release cli
       uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
       with:
         files: $OUTPUT_DIR/*
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Deploy App container
-      if: startsWith(github.ref, 'refs/tags/')
+  deploy-server:
+    name: Deploy server
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+
+    steps:
+    - uses: actions/checkout@v2
+      if: github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.ref == 'refs/heads/master'
+      with:
+        submodules: true
+    - run: git fetch --tags
+
+    - uses: actions/setup-haskell@v1.1
+      name: Setup Haskell Stack
+      with:
+        ghc-version: "8.6.5"
+        stack-version: "latest"
+        enable-stack: true
+
+    - uses: actions/cache@v1
+      name: Cache ~/.stack
+      with:
+        path: ~/.stack
+        key: deploy-arche-server-stack
+
+    - name: Build
+      run: |
+        make build
+
+    - name: Test
+      run: |
+        make run-test
+
+    - name: Deploy application container
       env:
         GCLOUD_SERVICE_KEY: {{ secrets.GCLOUD_SERVICE_KEY }}
       run: | 
