--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,10 @@ name: CI
 # Trigger the workflow on push or pull request, but only for the master branch
 on:
   pull_request:
-  push:
-    branches: [master]
 
 jobs:
-  ci-test:
-    name: CI test / ${{ matrix.os }} / ghc ${{ matrix.ghc }}
+  test:
+    name: ${{ matrix.os }} / ghc ${{ matrix.ghc }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -52,95 +50,8 @@ jobs:
       run: |
         make arche-server
 
-  release-cli:
-    name: ${{ matrix.os }} / ghc ${{ matrix.ghc }}
-    runs-on: ${{ matrix.os }}
-    if: startsWith(github.ref, 'refs/tags/')
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
-        stack: ["latest"]
-        ghc: ["8.6.5"]
-
-    steps:
-    - uses: actions/checkout@v2
-      if: github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.ref == 'refs/heads/master'
-      with:
-        submodules: true
-
-    - uses: actions/setup-haskell@v1.1
-      name: Setup Haskell Stack
-      with:
-        ghc-version: ${{ matrix.ghc }}
-        stack-version: ${{ matrix.stack }}
-        enable-stack: true
-
-    - uses: actions/cache@v1
-      name: Cache ~/.stack
-      with:
-        path: ~/.stack
-        key: ${{ runner.os }}-${{ matrix.ghc }}-stack
-
-    - name: Setup env
-      run: |
-        echo ::set-env name=OUTPUT_DIR::$(make show-output-dir)
-
-    - name: Build
-      run: |
-        make build
-
-    - name: Test
-      run: |
-        make run-test
-
-    - name: Build cli tool
-      run: |
-        make arche-cli
-
-    - name: Move artifacts
-      run: | 
-        make rename-binaries
-
-    - name: Release cli
-      uses: softprops/action-gh-release@v1
-      with:
-        files: $OUTPUT_DIR/*
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  deploy-server:
-    name: Deploy server
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
-
-    steps:
-    - uses: actions/checkout@v2
-      if: github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.ref == 'refs/heads/master'
-      with:
-        submodules: true
-
-    - uses: actions/setup-haskell@v1.1
-      name: Setup Haskell Stack
-      with:
-        ghc-version: "8.6.5"
-        stack-version: "latest"
-        enable-stack: true
-
-    - uses: actions/cache@v1
-      name: Cache ~/.stack
-      with:
-        path: ~/.stack
-        key: deploy-arche-server-stack
-
-    - name: Build
-      run: |
-        make build
-
-    - name: Test
-      run: |
-        make run-test
-
     - name: Deploy application container
+      if: startsWith(github.ref, 'refs/tags/')
       env:
         GCLOUD_SERVICE_KEY: ${{ secrets.GCLOUD_SERVICE_KEY }}
       run: | 
