--- a/.github/workflows/deploy-and-release.yml
+++ b/.github/workflows/deploy-and-release.yml
@@ -80,6 +80,22 @@ jobs:
         stack-version: "latest"
         enable-stack: true
 
+    - name: Setup node
+      uses: actions/setup-node@v1
+      with:
+        node-version: '12'
+    
+    - name: Install elm-app
+      run: npm install create-elm-app -g
+
+    - uses: actions/cache@v1
+      name: Cache ~/.npm
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+        
     - uses: actions/cache@v1
       name: Cache ~/.stack
       with:
@@ -89,6 +105,10 @@ jobs:
     - name: Build
       run: |
         make build
+
+    - name: Build frontend
+      run: |
+        make build-frontend
 
     - name: Test
       run: |
