[CI] trigger on tag

--- a/.github/workflows/deploy-and-release.yml
+++ b/.github/workflows/deploy-and-release.yml
@@ -1,8 +1,13 @@
 name: Deploy and Release
 
 on:
+  create:
+    tag:
+      - '*'
   push:
     branches: [master]
+    tag:
+      - '*'
 
 jobs:
   cli:
