--- a/.github/workflows/deploy-and-release.yml
+++ b/.github/workflows/deploy-and-release.yml
@@ -25,6 +25,11 @@ jobs:
         submodules: true
     - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
+    - name: Dump GitHub context
+      env:
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+      run: echo "$GITHUB_CONTEXT"
+
     - uses: actions/setup-haskell@v1.1
       name: Setup Haskell Stack
       with:
@@ -36,7 +41,9 @@ jobs:
       name: Cache ~/.stack
       with:
         path: ~/.stack
-        key: ${{ runner.os }}-${{ matrix.ghc }}-stack
+        key: stack-${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('stack.yaml.lock') }}
+        restore-keys: |
+          stack-${{ runner.os }}-${{ matrix.ghc }}-
 
     - name: Setup env
       run: |
@@ -58,15 +65,11 @@ jobs:
       run: | 
         make rename-binaries
 
-    - name: Debug output
-      run: |
-        ls -lah $OUTPUT_DIR/*
-
     - name: Release cli
       if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
-        files: $OUTPUT_DIR/*
+        files: '$OUTPUT_DIR/*'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -107,7 +110,9 @@ jobs:
       name: Cache ~/.stack
       with:
         path: ~/.stack
-        key: deploy-arche-server-stack
+        key: stack-${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('stack.yaml.lock') }}
+        restore-keys: |
+          stack-${{ runner.os }}-${{ matrix.ghc }}-
 
     - name: Build
       run: |
@@ -126,5 +131,4 @@ jobs:
       env:
         GCLOUD_SERVICE_KEY: ${{ secrets.GCLOUD_SERVICE_KEY }}
       run: | 
-        echo $GCLOUD_SERVICE_KEY | head -c 3
         make deploy-server
