[CI] ignore empty branches

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,9 @@ name: CI
 
 # Trigger the workflow on push or pull request, but only for the master branch
 on:
+  push:
+    branches:
+      - master
   pull_request:
 
 jobs:
