--- a/arche.cabal
+++ b/arche.cabal
@@ -71,6 +71,7 @@ Executable arche-server
     , base                       == 4.*
     , sledge                     >= 0.4
     , vtk                        >= 0.1
+    , aeson
     , bytestring
     , conduit
     , conduit-extra
@@ -82,14 +83,13 @@ Executable arche-server
     , lens
     , resourcet
     , servant-server
-    , servant-blaze
-    , servant-server
     , servant-multipart
     , text
     , warp
   other-modules:
     Handler.EBSDAPI 
     Handler.ORAPI 
+    Server.Config
 
 Library arche-server-lib
   hs-source-dirs: src-server-lib
@@ -108,8 +108,6 @@ Library arche-server-lib
     Util.FireStore.Value
     Util.OrphanInstances
     Util.Hash
-    Web.App
-    Web.Config
   build-depends:
       arche
     , base                       == 4.*
@@ -118,7 +116,6 @@ Library arche-server-lib
     , sledge                     >= 0.4
     , vtk                        >= 0.1
     , aeson                      >= 1.0
-    , blaze-html                 >= 0.9
     , bytestring                 >= 0.10
     , conduit                    >= 1.3
     , conduit-extra              >= 1.3
@@ -135,7 +132,6 @@ Library arche-server-lib
     , random                     >= 1.0
     , resourcet                  >= 1.2
     , servant                    >= 0.16
-    , servant-blaze              >= 0.7
     , servant-client             >= 0.16
     , servant-server             >= 0.16
     , servant-multipart          >= 0.11
