--- a/config-server.json
+++ b/config-server.json
@@ -1,3 +1,5 @@
 {
-    "oauthContext": ""
+    "oauth_azp": "772788016429-qil5o5moma9hrajor1bug6r6eh81nnql",
+    "port": 8080,
+    "run_mode": "FullAPI"
 }
