--- a/app/package.json
+++ b/app/package.json
@@ -1,18 +1,8 @@
 {
   "name": "arche-dev-server-proxy",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "directories": {
-    "test": "tests"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
+    "create-elm-app": "^4.2.23",
     "http-proxy-middleware": "^1.0.4"
   }
 }
