--- a/.github/workflows/deploy-and-release.yml
+++ b/.github/workflows/deploy-and-release.yml
@@ -133,6 +133,7 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       env:
         GCLOUD_SERVICE_KEY: ${{ secrets.GCLOUD_SERVICE_KEY }}
+        OAUTH_CLIENT_ID: ${{ secrets.OAUTH_AZP }}
       run: | 
         make deploy-server
 
