[FE] redefine path for compute api

--- a/app/firebase.json
+++ b/app/firebase.json
@@ -5,6 +5,22 @@
     ],
     "rewrites": [
       {
+        "source": "compute-api/**",
+        "run": {
+          "serviceId": "high-load-api",
+          "region": "us-central1"
+        }
+      },
+
+      {
+        "source": "api/**",
+        "run": {
+          "serviceId": "lightweight-api",
+          "region": "us-central1"
+        }
+      },
+
+      {
         "source": "**",
         "destination": "/index.html"
       }
