--- a/arche.cabal
+++ b/arche.cabal
@@ -116,12 +116,13 @@ Library arche-server-lib
     , linear-vect                >= 0.2
     , sledge                     >= 0.4
     , vtk                        >= 0.1
+    , adjunctions                >= 4.4
     , aeson                      >= 1.0
+    , binary                     >= 0.8.6.0
     , bytestring                 >= 0.10
     , conduit                    >= 1.3
     , conduit-extra              >= 1.3
     , containers                 >= 0.5
-    , fast-logger                >= 2.4
     , gogol                      >= 0.4
     , gogol-firestore            >= 0.4
     , gogol-storage              >= 0.4
