--- a/arche.cabal
+++ b/arche.cabal
@@ -109,6 +109,7 @@ Library arche-server-lib
     Util.FireStore.Value
     Util.Logger
     Util.OrphanInstances
+    Util.SignedUrl
     Util.Hash
   build-depends:
       arche
@@ -119,11 +120,13 @@ Library arche-server-lib
     , vtk                        >= 0.1
     , adjunctions                >= 4.4
     , aeson                      >= 1.0
-    , binary                     >= 0.8.6.0
+    , binary                     >= 0.8
     , bytestring                 >= 0.10
     , conduit                    >= 1.3
     , conduit-extra              >= 1.3
     , containers                 >= 0.5
+    , cryptonite                 >= 0.25
+    , cryptostore                >= 0.2
     , gogol                      >= 0.4
     , gogol-firestore            >= 0.4
     , gogol-storage              >= 0.4
@@ -131,7 +134,10 @@ Library arche-server-lib
     , http-client                >= 0.6
     , http-client-tls            >= 0.3
     , http-conduit               >= 2.0
+    , http-types                 >= 0.12
+    , HTTP                       >= 4000.3
     , lens                       >= 4.0
+    , memory                     >= 0.14
     , random                     >= 1.0
     , resourcet                  >= 1.2
     , servant                    >= 0.16
@@ -145,6 +151,7 @@ Library arche-server-lib
     , vector                     >= 0.12
     , warp                       >= 3.0
     , wai                        >= 3.0
+    , x509                       >= 1.7
 
 Library
   hs-source-dirs:    src
