--- a/arche.cabal
+++ b/arche.cabal
@@ -88,6 +88,7 @@ Executable arche-server
     , text
     , warp
   other-modules:
+    Handler.ArcheAPI 
     Handler.EBSDAPI 
     Handler.ORAPI 
     Server.Config
