--- a/arche.cabal
+++ b/arche.cabal
@@ -74,12 +74,16 @@ Executable arche-server
     , sledge                     >= 0.4
     , vtk                        >= 0.1
     , aeson
+    , base64-bytestring
+    , binary
     , bytestring
     , conduit
     , conduit-extra
     , gogol
+    , gogol-cloudtasks
     , gogol-firestore
     , gogol-storage
+    , http-client
     , http-conduit
     , http-media
     , lens
@@ -89,8 +93,8 @@ Executable arche-server
     , servant-multipart
     , text
     , transformers
+    , unordered-containers
     , warp
-    , wai-cors
   other-modules:
     Handler.ArcheAPI 
     Handler.EBSDAPI 
@@ -111,6 +115,7 @@ Library arche-server-lib
     Type.Storage
     Type.Store
     Util.Auth
+    Util.Client
     Util.FireStore
     Util.FireStore.Document
     Util.FireStore.Value
@@ -122,44 +127,46 @@ Library arche-server-lib
   build-depends:
       arche
     , base                       == 4.*
-    , hammer                     >= 0.4
-    , linear-vect                >= 0.2
-    , sledge                     >= 0.4
-    , vtk                        >= 0.1
-    , adjunctions                >= 4.4
-    , aeson                      >= 1.0
-    , base64-bytestring          >= 1.0
-    , binary                     >= 0.8
-    , bytestring                 >= 0.10
-    , conduit                    >= 1.3
-    , conduit-extra              >= 1.3
-    , containers                 >= 0.5
-    , cryptonite                 >= 0.25
-    , cryptostore                >= 0.2
-    , gogol                      >= 0.4
-    , gogol-firestore            >= 0.4
-    , gogol-storage              >= 0.4
-    , hashable                   >= 1.2
-    , http-client                >= 0.6
-    , http-client-tls            >= 0.3
-    , http-conduit               >= 2.0
-    , http-types                 >= 0.12
-    , HTTP                       >= 4000.3
-    , lens                       >= 4.0
-    , memory                     >= 0.14
-    , random                     >= 1.0
-    , resourcet                  >= 1.2
-    , servant                    >= 0.16
-    , servant-client             >= 0.16
-    , servant-server             >= 0.16
-    , text                       >= 1.0
-    , time                       >= 1.8
-    , unordered-containers       >= 0.2
-    , uuid                       >= 1.0
-    , vector                     >= 0.12
-    , warp                       >= 3.0
-    , wai                        >= 3.0
-    , x509                       >= 1.7
+    , hammer
+    , linear-vect
+    , sledge
+    , vtk
+    , adjunctions
+    , aeson
+    , base64-bytestring
+    , binary
+    , bytestring
+    , conduit
+    , conduit-extra
+    , containers
+    , cryptonite
+    , cryptostore
+    , free
+    , gogol
+    , gogol-firestore
+    , gogol-storage
+    , hashable
+    , http-client
+    , http-client-tls
+    , http-conduit
+    , http-types
+    , HTTP
+    , lens
+    , memory
+    , random
+    , resourcet
+    , servant
+    , servant-client
+    , servant-client-core
+    , servant-server
+    , text
+    , time
+    , unordered-containers
+    , uuid
+    , vector
+    , warp
+    , wai
+    , x509
 
 Library
   hs-source-dirs:    src
