[BE] also make OR fitting async

--- a/arche.cabal
+++ b/arche.cabal
@@ -124,6 +124,7 @@ Library arche-server-lib
     Util.OrphanInstances
     Util.SignedUrl
     Util.Storage
+    Util.Tasks
     Util.Hash
   build-depends:
       arche
@@ -146,6 +147,7 @@ Library arche-server-lib
     , gogol
     , gogol-firestore
     , gogol-storage
+    , gogol-cloudtasks
     , hashable
     , http-client
     , http-client-tls
